--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   --width:40px;
 }
 
+
+
 body {
   background-color: #212529;
   font-family: 'Montserrat', sans-serif;
@@ -42,6 +44,7 @@ body {
 .bar {
   width: var(--width);
   background-color: whitesmoke;
+/*   background-color:yellow; */
   margin-right: 2px;
   margin-left: 5px;
   display: inline-block;
@@ -58,10 +61,3 @@ body {
   font-weight: bold;
   width: 225px;
 }
-
-/* .bar:hover {
-  transition: 0.3s ease-out;
-  box-shadow: 10px 10px 10px 10px purple;
-  width: 3%;
-  margin: 0px 5px 0px 7px;
-} */
